# stocks-breakout-ledger

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/daily/us/nasdaq etfs/: aadr.us.txt  aavm.us.txt  abi.us.txt  acwi.us.txt  acwx.us.txt  afos.us.txt  agem.us.txt  agix.us.txt  agmi.us.txt  agng.us.txt  agzd.us.txt  aipi.us.txt  alil.us.txt  amdl.us.txt  amzd.us.txt  amzu.us.txt  amzz.us.txt  appx.us.txt  aqwa.us.txt  asmg.us.txt  avgx.us.txt  avuq.us.txt  basg.us.txt  bbh.us.txt  bgrn.us.txt  bis.us.txt  blcr.us.txt  bmax.us.txt  bnd.us.txt  bndw.us.txt  boed.us.txt  boeg.us.txt  brhy.us.txt  bsct.us.txt  bscu.us.txt  bscv.us.txt  bscx.us.txt  bscz.us.txt  bsjs.us.txt  bsmq.us.txt  (+270 more)
data/daily/us/nysemkt stocks/: accs.us.txt  aef.us.txt  airi.us.txt  amze.us.txt  apus.us.txt  aren.us.txt  asm.us.txt  atch.us.txt  atnm.us.txt  bhv.us.txt  bmnr.us.txt  bq.us.txt  brbs.us.txt  bria.us.txt  brn.us.txt  canf.us.txt  cet.us.txt  cik.us.txt  cohn.us.txt  crf.us.txt  cvm.us.txt  cybn.us.txt  dc.us.txt  dmyy.us.txt  dxf.us.txt  egg.us.txt  eim.us.txt  ep.us.txt  epm.us.txt  esp.us.txt  evm.us.txt  evv.us.txt  fax.us.txt  fco.us.txt  flyx.us.txt  ftf.us.txt  fury.us.txt  ggn_b.us.txt  glu.us.txt  glu_a.us.txt  (+56 more)
data/input/: input.csv
src/: app.py  cli.py  compute.py  compute_util.py  config.py  data.py  date_util.py  detect_candidates.py  fetch.py  main.py  plot.py  plot_setup.py  util.py
src/ledger/: cli.py  config.py  date_util.py  main.py  ohlc_fetch.py  storage.py
src/pages/: 2_QQQ_Breakouts.py  3_Strategy_Analytics.py  4_Candidate_Detector.py
(+11348 files in other folders)
